pd2/python_pd2Parser.py
# Generated from pd2/python_pd2.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class python_pd2Parser ( Parser ):

    grammarFileName = "python_pd2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "'['", "']'", "'='", "'+='", "'-='", 
                     "'*='", "'/='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'and'", "'or'", "'not'", "'if'", "'elif'", "'else'", 
                     "':'", "<INVALID>", "<INVALID>", "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ASSIGN", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "AND", "OR", "NOT", "IF", "ELIF", 
                      "ELSE", "COLON", "VARIABLE", "NUMBER", "STRING", "COMMA", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_if_block = 3
    RULE_block = 4
    RULE_condition = 5
    RULE_expression = 6
    RULE_comparison = 7
    RULE_list = 8

    ruleNames =  [ "program", "statement", "assignment", "if_block", "block", 
                   "condition", "expression", "comparison", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    ASSIGN=11
    ADD_ASSIGN=12
    SUB_ASSIGN=13
    MUL_ASSIGN=14
    DIV_ASSIGN=15
    ADD=16
    SUB=17
    MUL=18
    DIV=19
    MOD=20
    AND=21
    OR=22
    NOT=23
    IF=24
    ELIF=25
    ELSE=26
    COLON=27
    VARIABLE=28
    NUMBER=29
    STRING=30
    COMMA=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.StatementContext,i)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = python_pd2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.statement()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==24 or _la==28):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(python_pd2Parser.AssignmentContext,0)


        def if_block(self):
            return self.getTypedRuleContext(python_pd2Parser.If_blockContext,0)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = python_pd2Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 25
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.assignment()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.if_block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return python_pd2Parser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SubAssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)
        def SUB_ASSIGN(self):
            return self.getToken(python_pd2Parser.SUB_ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubAssign" ):
                listener.enterSubAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubAssign" ):
                listener.exitSubAssign(self)


    class MulAssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)
        def MUL_ASSIGN(self):
            return self.getToken(python_pd2Parser.MUL_ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulAssign" ):
                listener.enterMulAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulAssign" ):
                listener.exitMulAssign(self)


    class AddAssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)
        def ADD_ASSIGN(self):
            return self.getToken(python_pd2Parser.ADD_ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddAssign" ):
                listener.enterAddAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddAssign" ):
                listener.exitAddAssign(self)


    class SimpleAssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(python_pd2Parser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleAssign" ):
                listener.enterSimpleAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleAssign" ):
                listener.exitSimpleAssign(self)


    class DivAssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)
        def DIV_ASSIGN(self):
            return self.getToken(python_pd2Parser.DIV_ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivAssign" ):
                listener.enterDivAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivAssign" ):
                listener.exitDivAssign(self)



    def assignment(self):

        localctx = python_pd2Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = python_pd2Parser.SimpleAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.match(python_pd2Parser.VARIABLE)
                self.state = 28
                self.match(python_pd2Parser.ASSIGN)
                self.state = 29
                self.expression(0)
                pass

            elif la_ == 2:
                localctx = python_pd2Parser.AddAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.match(python_pd2Parser.VARIABLE)
                self.state = 31
                self.match(python_pd2Parser.ADD_ASSIGN)
                self.state = 32
                self.expression(0)
                pass

            elif la_ == 3:
                localctx = python_pd2Parser.SubAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.match(python_pd2Parser.VARIABLE)
                self.state = 34
                self.match(python_pd2Parser.SUB_ASSIGN)
                self.state = 35
                self.expression(0)
                pass

            elif la_ == 4:
                localctx = python_pd2Parser.MulAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.match(python_pd2Parser.VARIABLE)
                self.state = 37
                self.match(python_pd2Parser.MUL_ASSIGN)
                self.state = 38
                self.expression(0)
                pass

            elif la_ == 5:
                localctx = python_pd2Parser.DivAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 39
                self.match(python_pd2Parser.VARIABLE)
                self.state = 40
                self.match(python_pd2Parser.DIV_ASSIGN)
                self.state = 41
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(python_pd2Parser.IF, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ConditionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ConditionContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.COLON)
            else:
                return self.getToken(python_pd2Parser.COLON, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.BlockContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.BlockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.ELIF)
            else:
                return self.getToken(python_pd2Parser.ELIF, i)

        def ELSE(self):
            return self.getToken(python_pd2Parser.ELSE, 0)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_block" ):
                listener.enterIf_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_block" ):
                listener.exitIf_block(self)




    def if_block(self):

        localctx = python_pd2Parser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(python_pd2Parser.IF)
            self.state = 45
            self.condition(0)
            self.state = 46
            self.match(python_pd2Parser.COLON)
            self.state = 47
            self.block()
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 48
                    self.match(python_pd2Parser.ELIF)
                    self.state = 49
                    self.condition(0)
                    self.state = 50
                    self.match(python_pd2Parser.COLON)
                    self.state = 51
                    self.block() 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 58
                self.match(python_pd2Parser.ELSE)
                self.state = 59
                self.match(python_pd2Parser.COLON)
                self.state = 60
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.StatementContext,i)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = python_pd2Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 63
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 66 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return python_pd2Parser.RULE_condition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class OrConditionContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ConditionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ConditionContext,i)

        def OR(self):
            return self.getToken(python_pd2Parser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrCondition" ):
                listener.enterOrCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrCondition" ):
                listener.exitOrCondition(self)


    class AndConditionContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ConditionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ConditionContext,i)

        def AND(self):
            return self.getToken(python_pd2Parser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndCondition" ):
                listener.enterAndCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndCondition" ):
                listener.exitAndCondition(self)


    class NotConditionContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(python_pd2Parser.NOT, 0)
        def condition(self):
            return self.getTypedRuleContext(python_pd2Parser.ConditionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotCondition" ):
                listener.enterNotCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotCondition" ):
                listener.exitNotCondition(self)


    class ComparisonConditionContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,i)

        def comparison(self):
            return self.getTypedRuleContext(python_pd2Parser.ComparisonContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonCondition" ):
                listener.enterComparisonCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonCondition" ):
                listener.exitComparisonCondition(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = python_pd2Parser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_condition, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 9, 28, 29, 30]:
                localctx = python_pd2Parser.ComparisonConditionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 69
                self.expression(0)
                self.state = 70
                self.comparison()
                self.state = 71
                self.expression(0)
                pass
            elif token in [23]:
                localctx = python_pd2Parser.NotConditionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.match(python_pd2Parser.NOT)
                self.state = 74
                self.condition(3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 83
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = python_pd2Parser.AndConditionContext(self, python_pd2Parser.ConditionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 77
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 78
                        self.match(python_pd2Parser.AND)
                        self.state = 79
                        self.condition(3)
                        pass

                    elif la_ == 2:
                        localctx = python_pd2Parser.OrConditionContext(self, python_pd2Parser.ConditionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 80
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 81
                        self.match(python_pd2Parser.OR)
                        self.state = 82
                        self.condition(2)
                        pass

             
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return python_pd2Parser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NumberContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(python_pd2Parser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)


    class ParensContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)


    class ModuloExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,i)

        def MOD(self):
            return self.getToken(python_pd2Parser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuloExpr" ):
                listener.enterModuloExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuloExpr" ):
                listener.exitModuloExpr(self)


    class StringContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(python_pd2Parser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class AdditionExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(python_pd2Parser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditionExpr" ):
                listener.enterAdditionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditionExpr" ):
                listener.exitAdditionExpr(self)


    class VariableContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)


    class MultiplicationExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(python_pd2Parser.MUL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicationExpr" ):
                listener.enterMultiplicationExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicationExpr" ):
                listener.exitMultiplicationExpr(self)


    class ListExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def list_(self):
            return self.getTypedRuleContext(python_pd2Parser.ListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListExpr" ):
                listener.enterListExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListExpr" ):
                listener.exitListExpr(self)


    class SubtractionExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,i)

        def SUB(self):
            return self.getToken(python_pd2Parser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtractionExpr" ):
                listener.enterSubtractionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtractionExpr" ):
                listener.exitSubtractionExpr(self)


    class DivisionExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd2Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,i)

        def DIV(self):
            return self.getToken(python_pd2Parser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivisionExpr" ):
                listener.enterDivisionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivisionExpr" ):
                listener.exitDivisionExpr(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = python_pd2Parser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = python_pd2Parser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 89
                self.match(python_pd2Parser.T__0)
                self.state = 90
                self.expression(0)
                self.state = 91
                self.match(python_pd2Parser.T__1)
                pass
            elif token in [9]:
                localctx = python_pd2Parser.ListExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 93
                self.list_()
                pass
            elif token in [30]:
                localctx = python_pd2Parser.StringContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 94
                self.match(python_pd2Parser.STRING)
                pass
            elif token in [29]:
                localctx = python_pd2Parser.NumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 95
                self.match(python_pd2Parser.NUMBER)
                pass
            elif token in [28]:
                localctx = python_pd2Parser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 96
                self.match(python_pd2Parser.VARIABLE)
                pass
            else:
                raise NoViableAltException(self)
